<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_rounded_corners"
    android:orientation="vertical">

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="This is a huge problem!!!" />

    <TextView
        android:id="@+id/tryAgainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry_again"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/errorTextView"
        app:layout_constraintStart_toStartOf="@+id/errorTextView"
        app:layout_constraintTop_toBottomOf="@+id/errorTextView" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/okButton"
        app:layout_constraintTop_toBottomOf="@+id/tryAgainLabel" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tryAgainLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>